--- a/Kaiserreich Korean Translation/localisation/KR_Soviet_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Soviet_l_english.yml
@@ -3,23 +3,23 @@
 ### Ideas ###
 SOV_COL_END:0 "Agrarian Workerhood"
 SOV_COL_MILITIA:0 "Communal Militias"
-SOV_IND_ARMY:0 "Industrial Army"
+SOV_IND_ARMY:0 "산업군Industrial Army"
 SOV_ELECT_MIL:0 "군 팩션Army faction"
 SOV_ELECT_NAT:0 "National-Syndicalist faction"
 SOV_ELECT_KGB:0 "NKVD 탈취takeover"
-SOV_ELECT_LEN:0 "신-레닌주의 팩션New-Leninist faction"
-SOV_ELECT_TRU:0 "진정한 노조주의 팩션True Syndicalism faction"
-SOV_ELECT_REV:0 "World Revolution faction"
-land_bonus:0 "Frunze's genius"
+SOV_ELECT_LEN:0 "신-레닌주의 세력New-Leninist faction"
+SOV_ELECT_TRU:0 "진정한 노조주의 세력True Syndicalism faction"
+SOV_ELECT_REV:0 "세계 혁명 세력World Revolution faction"
+land_bonus:0 "프룬제의 천재성Frunze's genius"
 SOV_RES_FRUNZE:0 "러시아어 교육Russian language education"
 SOV_CULTURE_FRUNZE:0 "새로운 러시아 문화ew Russian culture"
-SOYUZMULTFILM:0 "Soviet Animation"
-SOV_ARMY_RED:0 "Soldiers of the union"
+SOYUZMULTFILM:0 "소비에트 애니메이션Soviet Animation"
+SOV_ARMY_RED:0 "연방의 군인들Soldiers of the union"
 SOV_RES_SOV:0 "소비에트 학계Soviet academia"
-SOV_REPUB:0 "소비에트 공화국Soviet Republics"
+SOV_REPUB:0 "소비에트 공화국들Soviet Republics"
 TUKH_REVOLT:0 "세계 혁명World revolution"
-TUKH_SCI:0 "United humanity"
-TUKH_PROP:0 "Transcontinental broadcasts"
+TUKH_SCI:0 "하나된 인류United humanity"
+TUKH_PROP:0 "대륙횡단 방송Transcontinental broadcasts"
 EXP_REV:0 "혁명 수출Exporting the revolution"
 unlock_soviet:0 "You must unlock additional comrades"
 
@@ -40,131 +40,131 @@ SOV_syndicalist_party:0 "연방주의자"
 SOV_radical_socialist_party:0 "자치주의자"
 
 ### Focuses ###
-SOV_FRUNZE:0 "Elect Frunze's Autonomists!"
+SOV_FRUNZE:0 "프룬제의 자치론자를 선출한다!"
 SOV_FRUNZE_desc:0 "Frunze's autonomists faction have managed to gain wide support from the Russian majority and have won the first general soviet elections!"
-SOV_SOVNARKOM:0 "Elect Bukharin's Federalists!"
+SOV_SOVNARKOM:0 "부하린의 연방주의자를 선출한다!"
 SOV_SOVNARKOM_desc:0 "Bukharin's federal theory have impressed the many minorities and nationalities in Russia and have won the first general soviet elections!"
-SOV_TUKH:0 "Elect Tukhachevsky's Internationalists!"
+SOV_TUKH:0 "투하체프스키의 국제주의자를 선출한다!"
 SOV_TUKH_desc:0 "Tukhachevsky's world revolution gains the support of the soldiers and activists and have won the first general soviet elections!"
-SOV_ECO_START:0 "Start Economic Reforms"
+SOV_ECO_START:0 "경제 개혁 시작"
 SOV_ECO_START_desc:0 "If we want to achieve our glorious communist future we must enact economic reforms and remove all memory of capitalism in the motherland!"
-SOV_COL_START:0 "Begin Collectivisation of Agriculture"
+SOV_COL_START:0 "농업 집산화 시작"
 SOV_COL_START_desc:0 "By encouraging agrarian workers' self-collectivisation we can expect growth in agricultural and raw goods production."
-SOV_COL_FIRST:0 "Kolkhozes and Sovkhozes"
+SOV_COL_FIRST:0 "콜호스와 소프호스"
 SOV_COL_FIRST_desc:0 "By creating a dual system of government and cooperative farms we can begin transforming the peasants into true workers!"
-SOV_COL_LAST:0 "Introduce Communal Workshops"
+SOV_COL_LAST:0 "공동 작업장 도입"
 SOV_COL_LAST_desc: "By introducing small scale industrial workshops in the sovkhozes we can increase our industrial output as well as the worker solidarity of our people."
-SOV_COL_RAW:0 "Agrarian Workers"
+SOV_COL_RAW:0 "농업 노동자"
 SOV_COL_RAW_desc:0 "Our efforts to transform the old Russian peasantry into true members of the proletarian have paid off! We are one step closer to creating a workers' paradise!"
-SOV_COL_MIL:0 "Arm the Collectives!"
+SOV_COL_MIL:0 "공동체를 무장시키자!"
 SOV_COL_MIL_desc:0 "The hard-working men and women in our collectives wish to protect the fruits of their labour from exploiters, both domestic and foreign. If we accept their wishes and form collective militias we could drastically increase our reserves!"
-SOV_IND_START:0 "Seize the Means of Production!"
+SOV_IND_START:0 "생산 수단을 하자!"
 SOV_IND_START_desc:0 "Now that the political matters have been sorted, we can finally collectivise the means of production and create independent workers' cooperatives."
-SOV_IND_FIRST:0 "Upgrade Old Factories"
+SOV_IND_FIRST:0 "오래된 공장 개선"
 SOV_IND_FIRST_desc:0 "Despite years of Capitalist economic policies, the industry is still in a state of disrepair and technological disadvantage. It is time we make an effort to modernise the economy."
-SOV_IND_LAST:0 "Build New Factories"
+SOV_IND_LAST:0 "새로운 공장 건설"
 SOV_IND_LAST_desc:0 "If we want to create a strong industrial army we must expand the existing industrial capacity and build new factories."
-SOV_IND_ARM:0 "An Industrial Army"
+SOV_IND_ARM:0 "산업군"
 SOV_IND_ARM_desc:0 "We have finally created a strong industrial base that could be considered a true industrial army. We are one step closer to Communism!"
-FRUNZE_COUNCILS:0 "Establish the Autonomies"
+FRUNZE_COUNCILS:0 "자치 확립"
 FRUNZE_COUNCILS_desc:0 "After the re-establishment of Soviet Russia, various nationalist groups began working to secede from Russia and declare their independence. If we create cultural autonomous institutions to the various cultural groups we can keep Russia safe from separatists."
-FRUNZE_LANGUAGE:0 "Russian Education"
+FRUNZE_LANGUAGE:0 "러시아어 교육"
 FRUNZE_LANGUAGE_desc:0 "With the new Russian language education programs for minorities, greater research potential can be achieved with multi-ethnic teams."
-FRUNZE_ARMY:0 "Frunze's genius"
+FRUNZE_ARMY:0 "프룬제의 천재성"
 FRUNZE_ARMY_desc:0 "By learning from Frunze's ingenious military and political manoeuvres we can improve the red army's doctrinal thought."
-FRUNZE_CULTURE:0 "New Russian culture"
+FRUNZE_CULTURE:0 "새로운 러시아 문화"
 FRUNZE_CULTURE_desc:0 "Through a combination of educational and political reforms, we have created a new generation in Soviet Russia, instilled with new Russian Socialist ideals."
-SOV_FILM:0 "Soyuzmultfilm"
+SOV_FILM:0 "소유즈멀트필름"
 SOV_FILM_desc:0 "We have created an animation studio comprised of talented individuals from all over the union, as well as foreign defectors from Japan and the USA, and have started making quality animation for the whole world to see."
-SOV_ARMY:0 "Soldiers of the Union"
+SOV_ARMY:0 "연방의 군인들"
 SOV_ARMY_desc: "By including warriors and tactics from all over the union into the red army doctrine we can give our army an edge over our enemies."
 SOV_RES:0 "소비에트 학계Soviet Academia"
 SOV_RES_desc:0 "The advancement of science has a key role in the success of the revolution. We must invest in education to create a generation of engineers and scientists!"
-SOV_REPUBLICS:0 "The Soviet Republics"
+SOV_REPUBLICS:0 "소비에트 공화국들"
 SOV_REPUBLICS_desc:0 "The division of the old Tsarist lands into various self-governing national republics have reduced much of the stress that would normally be on a centralised state."
-TUKH_DIP:0 "Socialist Internationalism"
+TUKH_DIP:0 "국제사회주의"
 TUKH_DIP_desc:0 "The revolution can't be complete by one country alone. We must reach out to all workers' states around the world and offer them a hand of friendship!"
-TUKH_REV:0 "World Revolution"
+TUKH_REV:0 "세계 혁명"
 TUKH_REV_desc:0 "It is time to bring the Soviet revolution to the peoples of the world!"
-TUKH_RES:0 "A United Humanity"
+TUKH_RES:0 "하나된 인류"
 TUKH_RES_desc:0 "We were able to cast off our old hatred and recognise the human inside everyone. Now, without the hindrance of race or nation we are able to advance a united humanity together."
-TUKH_UNI:0 "Transcontinental Broadcasts"
+TUKH_UNI:0 "대륙 횡단 방송"
 TUKH_UNI_desc:0 "Our glorious Soviet republic stretches between multiple continents, and in order to bring the people of our vast motherland together, our voices must reach each other from afar!"
-SOV_EXT_RES:0 "Science Funding"
+SOV_EXT_RES:0 "과학 기금"
 SOV_EXT_RES_desc:0 "After sorting out our internal policy, we can finally divert much needed additional funding to our research projects."
-SOV_ROCK:0 "Reds with Rockets"
+SOV_ROCK:0 "로켓을 가진 붉은 군대"
 SOV_ROCK_desc:0 "Our science guys are telling us that they can propel an object in miraculous speeds if we stick a booster to its back end. We can throw some money their way to see if this leads anywhere."
-SOV_NUC:0 "Project (UN)breakable"
+SOV_NUC:0 "파괴(불가) 계획"
 SOV_NUC_desc:0 "Our science guys are telling us that they can create tremendous amounts of energy by splitting atoms. We can throw some money their way to see if this leads anywhere."
-SOV_NAV_START:0 "Launch Naval Reorganisation"
+SOV_NAV_START:0 "해군 재조직 착수"
 SOV_NAV_START_desc:0 "The Soviet navy is both outdated and small. It would be costly, but if we are to dominate the seas we need to make massive naval investments."
-SOV_NAV_CRUS:0 "Launch Cruiser Overhaul"
+SOV_NAV_CRUS:0 "순양함 정비 착수"
 SOV_NAV_CRUS_desc:0 "Cruisers play an integral role in any modern navy. We should focus our naval efforts to develop our cruisers further."
-SOV_NAV_BAS:0 "Increase Naval Production"
+SOV_NAV_BAS:0 "군함 건조 증가"
 SOV_NAV_BAS_desc:0 "Many of the enemies of the people have stronger navies than we do. We must increase our naval production to match up to them."
-SOV_NAV_DOC:0 "Soviet Naval Academy"
+SOV_NAV_DOC:0 "소비에트 해군 사관학교"
 SOV_NAV_DOC_desc:0 "The old Russian naval academy was a home of a reactionaries and old guards. By constructing a new, better naval academy that promotes free thinking we can develop new naval doctrines."
-SOV_NAV_BAT:0 "Launch Battleship Overhaul"
+SOV_NAV_BAT:0 "전함 정비 착수"
 SOV_NAV_BAT_desc:0 "Our battleships, much like the naval staff of the Russian Empire, are badly outdated and in need of modernisation."
-SOV_EXP_REV:0 "Exporting the Revolution"
+SOV_EXP_REV:0 "혁명 전파"
 SOV_EXP_REV_desc:0 "Now that Soviet power is firmly established within the heartland of Russia we can now decide our stance regarding the rest of the world and how far-reaching our goals will be."
-SOV_EXP_FAR:0 "Eastern Security"
+SOV_EXP_FAR:0 "동부의 안보"
 SOV_EXP_FAR_desc:0 "In the far east there are mortal threats to the Soviet state, namely Japan and its ever-expanding co-prosperity sphere and the khanate of Mongolia. We can use our vast network of connections or the might of the red army to change the political landscape in our favour."
-SOV_EXP_CEN:0 "Southern Expansion"
+SOV_EXP_CEN:0 "남부로 확장"
 SOV_EXP_CEN_desc:0 "By regaining the Steppes and the Caucasus we can expand our influence to India and the middle east."
-SOV_EXP_EUR:0 "Soviet Europe"
+SOV_EXP_EUR:0 "소비에트 유럽"
 SOV_EXP_EUR_desc:0 "The end of the Weltkrieg saw much of the Russian territory in eastern Europe ceded to various German puppets and imperial regimes. We must regain these lands and strike at the heart of the German empire!"
-SOV_CEN_COS:0 "Red Cossacks"
+SOV_CEN_COS:0 "붉은 카자크"
 SOV_CEN_COS_desc:0 "With the stabilisation of our motherland we can now start looking beyond our borders. To the south lies the pseudo-capitalist Cossack state led by Hetman Krasnov. Soviet Marshal Budyonny has petitioned our government to instigate a coup in the Don-Kuban Union by using his significant influence among the Cossack population. Shall we offer him our support?"
-SOV_CEN_CAU:0 "Advance on the Caucasus"
+SOV_CEN_CAU:0 "캅카스로 진군"
 SOV_CEN_CAU_desc:0 "We are now free to regain the resource rich Caucasian minor states and open a gate to the middle east. The question is how we go about doing that."
-SOV_CEN_WAR:0 "War in Central Asia"
+SOV_CEN_WAR:0 "중앙 아시아 전쟁"
 SOV_CEN_WAR_desc:0 "Our military leadership are considering the next course of action in order to bring Syndicalism to the entire world. Central Asia is still dominated by religious fanatics based in Turkestan and bourgeois traitors in Alash-Orda with both states locked in a fight to the death. This presents us with an opportunity to further spread the ideals of Lenin and bring stability back to Central Asia."
-SOV_CEN_ALO:0 "Revolution in Alash-Orda?"
+SOV_CEN_ALO:0 "알라쉬-오르다에서의 혁명?"
 SOV_CEN_ALO_desc:0 "We are currently in a prime position to use our network of contacts and supporters among the Russian population in Alash-Orda to stage a Syndicalist coup against the government."
-SOV_CEN_TRK:0 "War with Turkestan!"
+SOV_CEN_TRK:0 "투르케스탄과의 전쟁!"
 SOV_CEN_TRK_desc:0 "Now that the Alash state have been dealt with we can strike at the heart of the Islamic state of Turkestan. Their long list of crimes is about to come to an end."
-SOV_FAR_TRA:0 "Transamurian Syndicalists"
+SOV_FAR_TRA:0 "트랜스아무르의 노조주의자들"
 SOV_FAR_TRA_desc:0 "Various dissenting groups operating against the Transamurian Admiralty are seeking support. We can offer them our assistance and influence them towards our cause!"
-SOV_FAR_MON:0 "The Trans-Siberian Crisis"
+SOV_FAR_MON:0 "시베리아 횡단 위기"
 SOV_FAR_MON_desc:0 "Horrible news! A train full of Soviet citizens has been massacred by bandits on the Mongolian section of the Trans-Siberian railway! Our people are shocked by this act of barbarism and demand an immediate response from the government. Baron von Ungern-Sternberg, Supreme Khan of All Mongols, is getting stronger. This might be the perfect opportunity to stop his wild and savage men."
-SOV_EUR_INT:0 "Join the Internationale!"
+SOV_EUR_INT:0 "인터내셔널에 가입하자!"
 SOV_EUR_sec_desc:0 "We must join our socialist friends in the Internationale if we want to regain our European lands and spread the revolution westwards."
-SOV_EUR_PRO:0 "Create the Fourth International"
+SOV_EUR_PRO:0 "제 4 인터내셔널을 창설하자"
 SOV_EUR_PRO_desc:0 "It is time for us to create a new power block, free from Paris, with the aim of liberating the workers all over the world!"
-SOV_FAR_JAP:0 "Strike Japan!"
+SOV_FAR_JAP:0 "일본을 공격한다!"
 SOV_FAR_JAP_desc:0 "We can now use the might of the Red Army to finally bring an end to Japan's Imperialist policies and bring peace to the east!"
-SOV_EUR_GER:0 "Crush the Imperialists"
+SOV_EUR_GER:0 "제국주의자들을 박멸하자"
 SOV_EUR_GER_desc:0 "Now that we have gained international aid we can plan a final attack against the German empire, put an end to their crimes and bring forth freedom to all of the world."
-SOV_EUR_WAR:0 "The Second Weltkrieg"
+SOV_EUR_WAR:0 "제2차 세계대전"
 SOV_EUR_WAR_desc:0 "The flames of war once again rage in Europe, and we have an opportunity to advance into Europe. Should we offer our help to France, or should we create our own faction?"
-SOV_CEN_PER:0 "Take Persia"
+SOV_CEN_PER:0 "페르시아를 차지하자"
 SOV_CEN_PER_desc:0 "Let us use 'ingenious diplomacy' to bring Persia into the fold."
-SOV_EUR_FIN:0 "Status of Karelia"
+SOV_EUR_FIN:0 "카렐리아의 상태"
 SOV_EUR_FIN_desc:0 "Karelia was lost to the reactionary Kingdom of Finland during the Russian civil war. There are many vocal members of the Soviet councils who speak of liberating the Finnish workers from their king."
 
 ### Domestic Events ###
-sovd.1.t:0 "Frunze declares victory"
+sovd.1.t:0 "프룬제가 승리를 선언하다"
 sovd.1.d:0 "Standing high on a pile of destroyed reactionary monuments in the recently reclaimed red square Mikhail Frunze announces his victory to his supporters in the first Soviet elections. With Soviet power, Russia will no longer be the punching bag of the world'"
-sovd.1.a:0 "소비에트 러시아는 우릴 승리르로 이끌 것이다!"
+sovd.1.a:0 "소비에트 러시아는 우릴 승리로 이끌 것이다!"
 sovd.1.b:0 "Let him keep his hat, though."
-sovd.2.t:0 "부하린이 승리를 발표하다"
+sovd.2.t:0 "부하린이 승리를 선언하다"
 sovd.2.d:0 "After working tirelessly to bring the Soviet state back to life and winning the first Soviet elections Bukharin addresses the Soviet people in a live radio broadcast from Petrograd, announcing his victory. He also declared that the city shall be renamed Leningrad in honour of the eternal revolutionary and the ideological visionary of the new Soviet Union."
 sovd.2.a:0 "소비에트 연방은 결코 부서지지 않는다!"
 sovd.3.t:0 "투하체프스키가 승리를 선언하다"
 sovd.3.d:0 "In a major public event held in Moscow, attended by socialist revolutionaries and diplomats from all over the world, the newly elected Mikhail Tukhachevsky has promised support for fellow workers attempting to free themselves throughout the world. 'The new Soviet Republic is the homeland of all workers' - he was quoted saying."
-sovd.3.a:0 "From the Taiga to the British sea, the Soviet Republic is the strongest!"
+sovd.3.a:0 "타이가부터 영국해까지, 소비에트 공화국이 가장 강력하다!"
 sovd.4.t:0 "생산 수단을 점령하다!"
 sovd.4.d:0 "With government support, workers throughout the country rise up against their employers and demand collective ownership over the means of production."
-sovd.4.a:0 "Great news!"
-sovd.5.t:0 "The Capital"
-sovd.5.d:0 "Either of Russia's historic capitals could become the home of our new socialist government. Where should we go?"
+sovd.4.a:0 "좋은 소식이군!"
+sovd.5.t:0 "수도"
+sovd.5.d:0 "러시아의 역사적인 수도 둘 모두 우리의 새로운 사회주의 정부의 집이 될 수 있습니다. 어디로 가겠습니까?"
 sovd.5.a:0 "레닌그라드!"
 sovd.5.b:0 "모스크바!"
 sovd.6.t:0 "정교회의 지위"
 sovd.6.d:0 "Now that Soviet power has been established in Russia we must decide our stance towards the powerful Orthodox Church. The Church itself is still very important to the masses yet part of our doctrine insists that we have to destroy or significantly weaken religious organisations. What shall we do?"
-sovd.6.a:0 "Purge the Church from Russia and install state atheism!"
-sovd.6.b:0 "Leave the Church alone, a secular state will do."
+sovd.6.a:0 "러시아에서 교회를 몰아내고 국가 무신론을 도입하자!"
+sovd.6.b:0 "교회는 홀로 내버려둬라, 세속적인 일은 국가가 할 것이다."
 sovd.6.c:0 "정교회는 우리 국교다!"
 sovd.7.t:0 "The clergy criticises the government"
 sovd.7.d:0 "A number of priests have voiced their disagreement with our policy of a secular and modern state. Even though this fact is of little importance we must keep in mind that religion plays a huge role in the average Russian's life."
