번역 추가 및 수정
- "National Protection Alliance"를 호국동맹이라 번역했습니다.
- "Leftist Kuomintang"은 좌익 국민당 보다는 국민당 좌파가 더 자연스러운 번역이라 생각합니다.

--- a/Kaiserreich Korean Translation/localisation/KR_Chinese_Republic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Chinese_Republic_l_english.yml
@@ -134,8 +134,8 @@ CHI_radical_socialist_party:0 "중국 공산당"
 CHI_radical_socialist_party_long:0 "중국 공산당 사회주의 팩션"
 CHI_syndicalist_party:0 "중국 공산당"
 CHI_syndicalist_party_long:0 "중국 공산당 노조주의 팩션"
-CHI_social_democrat_party:0 "좌익 국민당"
-CHI_social_democrat_party_long:0 "좌익 국민당"
+CHI_social_democrat_party:0 "국민당 좌파"
+CHI_social_democrat_party_long:0 "국민당 좌파"
 CHI_social_liberal_party:0 "국민당"
 CHI_social_liberal_party_long:0 "국민당"
 CHI_market_liberal_party:0 "자유당"
@@ -146,8 +146,8 @@ CHI_authoritarian_democrat_party:0 "중국 청년당"
 CHI_authoritarian_democrat_party_long:0 "중국 청년당"
 CHI_paternal_autocrat_party:0 "청조 복원당"
 CHI_paternal_autocrat_party_long:0 "청조 복원당"
-CHI_national_populist_party:0 "NPA"
-CHI_national_populist_party_long:0 "National Protection Alliance"
+CHI_national_populist_party:0 "호국동맹"
+CHI_national_populist_party_long:0 "호국동맹"
 
 ### Opinion Modifiers ###
 CHI_SQI_ALL:0 "우리는 동맹이다"
