--- a/Kaiserreich Korean Translation/localisation/KR_Ausgleich_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ausgleich_l_english.yml
@@ -353,7 +353,7 @@ ausgleich.73.b:0 "절대 안 돼!"
 ausgleich.74.t:0 "이탈리아와의 평화?"
 ausgleich.74.d:0 "이탈리아 영토에 대한 적군의 쇄도를 성공적으로 막아내고 반격까지 했습니다. 로마를 향한 길이 활짝 열렸습니다. 이탈리아보다 우위에 섰으니 다시는 저들이 역습할 수 없을 것입니다. 조만간 평화를 받아들이시지요."
 ausgleich.74.a:0 "현상 유지한다"
-ausgleich.74.b:0 "현상 유지 후 우리와 친한 정부를 수립한다"
+ausgleich.74.b:0 "현상 유지 후 친화적인 정부를 수립한다"
 ausgleich.74.c:0 "전쟁을 계속하라!"
 
 ausgleich.75.t:0 "오스트리아가 평화를 제의하다"
@@ -362,7 +362,7 @@ ausgleich.75.a:0 "망할 오스트리아 놈들!"
 ausgleich.75.b:0 "절대 안 돼!"
 
 ausgleich.76.t:0 "오스트리아가 평화를 제의하다"
-ausgleich.76.d:0 "오스트리아가 평화를 제의했습니다. 그리하면 오스트리아 영토에 대한 영유권을 전부 포기하고 오스트리아의 일개 자치령으로 전락하게 됩니다......"
+ausgleich.76.d:0 "오스트리아가 평화를 제의했습니다. 그리하면 오스트리아 영토에 대한 영유권을 전부 포기하고 오스트리아의 일개 자치령으로 전락하게 됩니다....."
 ausgleich.76.a:0 "망할 오스트리아 놈들!"
 ausgleich.76.b:0 "절대 안 돼!"
 
@@ -449,34 +449,34 @@ ausgleich.99.b:0 "무력으로 위협할 것이다!"
 ausgleich.99.c:0 "좋지 않은 생각이다."
 
 ausgleich.100.t:0 "헝가리인들의 요구"
-ausgleich.100.d:0 "After successfully surviving Austro-Hungarian civil war, Hungarian state has set its sight on the recently lost territory of Transylvania. Hungary has recently issued an official demand to wards our state regarding Transylvania, in which they demand cessation of Transylvania to them or they will use unspecified manners to gain control over it. What shall we do?"
-ausgleich.100.a:0 "Accept their terms."
+ausgleich.100.d:0 "오스트리아-헝가리 내전에서 성공적으로 살아남은 헝가리인들의 국가. 최근 그들이 상실한 트란실바니아 영토에 눈독을 들인다고 합니다. 또 헝가리는 트란실바니아에 관한 사안에서 공식적인 요구를 우리에게 해오기도 했습니다. 트란실바니아를 넘기면 거기에 그칠 수도 있고, 예상치 못한 태도로 점유를 시도해올 수도 있습니다. 어쩌시겠습니까?"
+ausgleich.100.a:0 "조건을 수락한다."
 ausgleich.100.b:0 "절대 안 돼!"
 
 ausgleich.101.t:0 "루마니아인들의 저항"
-ausgleich.101.d:0 "The mad Romanian leadership has rejected our rightful demands. How shall we react to this insolence?"
-ausgleich.101.a:0 "War will solve this!"
-ausgleich.101.b:0 "Back down."
+ausgleich.101.d:0 "정신나간 루마니아 지도층이 우리의 정당한 요구를 거부했습니다. 이 오만방자함에 어떤 답을 해야겠습니까?"
+ausgleich.101.a:0 "전쟁으로 해결한다!"
+ausgleich.101.b:0 "물러선다."
 
 ausgleich.102.t:0 "루마니아와의 평화?"
-ausgleich.102.d:0 "We have successfully defended our Transylvanian provinces against Romanian onslaught and launched a counterattack which brought us before the gates of Buchares! Because of Romania's weak position they probably have no chance to push us back and would probably accept a peace offer."
-ausgleich.102.a:0 "Restore pre-war borders and occupy Oltenia!"
-ausgleich.102.b:0 "Impose friendly government and occupy Oltenia!"
-ausgleich.102.c:0 "Continue War!"
+ausgleich.102.d:0 "트란실바니아 지역에 대한 루마니아군의 쇄도를 성공적으로 막아내고 반격까지 했습니다. 부쿠레슈티를 향한 길이 활짝 열렸습니다. 루마니아보다 우위에 섰으니 다시는 저들이 역습할 수 없을 것입니다. 조만간 평화를 받아들이시지요."
+ausgleich.102.a:0 "전쟁 이전의 국경을 복원하고 올테니아를 점령한다!"
+ausgleich.102.b:0 "친화적인 정부를 수립하고 올테니아를 점령한다!"
+ausgleich.102.c:0 "전쟁을 계속한다!"
 
-ausgleich.103.t:0 "Hungary offers peace"
-ausgleich.103.d:0 "Hungary has offered peace, however we must partially demobilise our armed forces and relinquish all claims on their territory."
-ausgleich.103.a:0 "Those damn Hungarians!"
-ausgleich.103.b:0 "Never!"
+ausgleich.103.t:0 "헝가리가 평화를 제의하다"
+ausgleich.103.d:0 "헝가리가 평화를 제의했습니다. 그리하면 우리 국군을 부분적으로 동원 해제하고 저들의 영토에 대한 영유권을 전부 포기해야 합니다."
+ausgleich.103.a:0 "망할 헝가리 놈들!"
+ausgleich.103.b:0 "절대 안 돼!"
 
-ausgleich.104.t:0 "Hungary offers peace"
-ausgleich.104.d:0 "Hungary has offered peace, however we must relinquish all claims on their territory and become Hungarian dominion....."
-ausgleich.104.a:0 "Those damn Hungarians!"
-ausgleich.104.b:0 "Never!"
+ausgleich.104.t:0 "헝가리가 평화를 제의하다"
+ausgleich.104.d:0 "헝가리가 평화를 제의했습니다. 그리하면 저들의 영토에 대한 영유권을 전부 포기하고 헝가리의 일개 자치령으로 전락하게 됩니다....."
+ausgleich.104.a:0 "망할 헝가리 놈들!"
+ausgleich.104.b:0 "절대 안 돼!"
 
-ausgleich.105.t:0 "Romania submits!"
-ausgleich.105.d:0 "Romania caves in to Hungary as expected. Our interests on Balkan peninsula are now secured."
-ausgleich.105.a:0 "Hurrah!"
+ausgleich.105.t:0 "루마니아 굴복!"
+ausgleich.105.d:0 "예상했던 대로 루마니아는 헝가리 앞에 무릎 꿇었습니다. 우리의 이권이 달린 발칸 반도는 이제 안전합니다."
+ausgleich.105.a:0 "만세!"
 
 ### Austria Claims Lost Hungarian Lands ###
 ausgleich.106.t:0 "Status of Transylvania"
@@ -519,41 +519,41 @@ ausgleich.113.d:0 "Romania caves in to Austria as expected. Our interests on Bal
 ausgleich.113.a:0 "Hurrah!"
 
 ### Serbia Claims Bosnia ###
-ausgleich.114.t:0 "Claim Bosnia?"
-ausgleich.114.d:0 "Now that chaos has engulfed the Austro-Hungarian empire, we have the opportunity to claim Bosnia for Serbia!"
-ausgleich.114.a:0 "Attack!"
-ausgleich.114.b:0 "This is a bad idea"
+ausgleich.114.t:0 "보스니아 영유권?"
+ausgleich.114.d:0 "오스트리아-헝가리는 들끓고 있습니다. 세르비아에게서 보스니아를 수복할 기회입니다!"
+ausgleich.114.a:0 "쳐라!"
+ausgleich.114.b:0 "좋지 않은 생각이다"
 
-ausgleich.115.t:0 "Bosnia under attack"
-ausgleich.115.d:0 "Bosnia sided with us during the Ausgleich. Now they are being attacked by Serbia. What shall we do?"
-ausgleich.115.a:0 "We will help them."
-ausgleich.115.b:0 "They will make on their own."
+ausgleich.115.t:0 "보스니아가 공격받다"
+ausgleich.115.d:0 "보스니아는 대타협 동안 우리 편을 들어주었습니다. 이제 그들은 세르비아에게 공격받고 있습니다. 어쩌면 좋을까요?"
+ausgleich.115.a:0 "그들을 돕는다."
+ausgleich.115.b:0 "알아서 잘 해결하겠지."
 
-ausgleich.116.t:0 "Offer peace?"
-ausgleich.116.d:0 "Now that we have reached our war goal we can offer peace to the other parties of the war."
-ausgleich.116.a:0 "Offer peace."
-ausgleich.116.b:0 "Fight on."
+ausgleich.116.t:0 "평화 제의?"
+ausgleich.116.d:0 "전쟁의 성과는 목표치에 도달했습니다. 이제 참전한 나머지 나라들에게 평화를 제의할 수 있습니다."
+ausgleich.116.a:0 "평화를 제의한다."
+ausgleich.116.b:0 "계속 싸운다."
 
-ausgleich.117.t:0 "Serbia offers peace"
-ausgleich.117.d:0 "Serbia offered peace to us. What shall we do?"
-ausgleich.117.a:0 "Accept peace."
-ausgleich.117.b:0 "Decline peace."
+ausgleich.117.t:0 "세르비아의 평화 제의"
+ausgleich.117.d:0 "세르비아가 평화 조약을 제의했습니다. 어쩌시겠습니까?"
+ausgleich.117.a:0 "평화를 받아들인다."
+ausgleich.117.b:0 "평화를 거절한다."
 
-ausgleich.118.t:0 "Status of Bosnia"
-ausgleich.118.d:0 "During the Ausgleich Serbia has conquered our Lands. We should retake them."
-ausgleich.118.a:0 "Demand our lands back."
-ausgleich.118.b:0 "We don't need these lands."
+ausgleich.118.t:0 "보스니아의 상황"
+ausgleich.118.d:0 "대타협 동안 세르비아는 우리 땅을 정복했습니다. 다시 가져와야만 합니다."
+ausgleich.118.a:0 "땅의 반환을 요구한다."
+ausgleich.118.b:0 "필요없는 땅이다."
 
-ausgleich.119.t:0 "Austria demands Bosnia"
-ausgleich.119.d:0 "During the Ausgleich Serbia has conquered Bosnia. Now Austria wants back their lands."
-ausgleich.119.a:0 "We should return Bosnia."
-ausgleich.119.b:0 "We own these lands now."
+ausgleich.119.t:0 "오스트리아가 보스니아를 요구했다"
+ausgleich.119.d:0 "대타협 동안 세르비아는 보스니아를 정복했습니다. 오스트리아는 그 땅이 되돌아오길 원하고 있습니다."
+ausgleich.119.a:0 "보스니아를 돌려줘야 한다."
+ausgleich.119.b:0 "이제는 우리 땅이다."
 
-ausgleich.120.t:0 "Bosnia returned"
-ausgleich.120.d:0 "Today Bosnian lands where returned to us."
-ausgleich.120.a:0 "Welcome them back."
+ausgleich.120.t:0 "보스니아 반환"
+ausgleich.120.d:0 "오늘, 보스니아 땅이 우리에게로 돌아왔습니다."
+ausgleich.120.a:0 "맞이하자."
 
-ausgleich.121.t:0 "Serbia refuses"
-ausgleich.121.d:0 "Serbia refuses to return Bosnia to us. The only option left is to declare war on them. What shall we do?"
-ausgleich.121.a:0 "War it is."
-ausgleich.121.b:0 "We don't need these lands."
+ausgleich.121.t:0 "세르비아의 거절"
+ausgleich.121.d:0 "세르비아가 보스니아 반환을 거부했습니다. 남은 선택지는 하나, 선전포고입니다. 어쩌시겠습니까?"
+ausgleich.121.a:0 "전쟁이다."
+ausgleich.121.b:0 "필요없는 땅이다."
