KR_Spain_l_english.yml 정당 이름 번역
스페인 내의 정당 이름을 번역했습니다.

--- a/Kaiserreich Korean Translation/localisation/KR_Spain_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Spain_l_english.yml
@@ -1,26 +1,26 @@
 ﻿l_english:
 
 ### Parties ###
-SPR_totalist_party:0 "POUM"
-SPR_totalist_party_long:0 "Partido Obrero de Unificación Marxista"
-SPR_syndicalist_party:0 "CNT-FAI"
-SPR_syndicalist_party_long:0 "Confederación Nacional del Trabajo - Federación Anarquista Ibérica"
-SPR_radical_socialist_party:0 "Caballeistas"
-SPR_radical_socialist_party_long:0 "Caballeistas"
-SPR_social_democrat_party:0 "Prietistas"
-SPR_social_democrat_party_long:0 "Prietistas"
-SPR_social_liberal_party:0 "Izquierda Republicana"
-SPR_social_liberal_party_long:0 "Izquierda Republicana"
-SPR_market_liberal_party:0 "PLM"
-SPR_market_liberal_party_long:0 "Partido Liberal Moderado"
-SPR_social_conservative_party:0 "Acción Popular"
-SPR_social_conservative_party_long:0 "The Moderate Faction of the Acción Popular"
-SPR_authoritarian_democrat_party:0 "Acción Popular"
-SPR_authoritarian_democrat_party_long:0 "The Radical Faction of the Acción Popular"
-SPR_paternal_autocrat_party:0 "Falange Española"
-SPR_paternal_autocrat_party_long:0 "Falange Española"
-SPR_national_populist_party:0 "JONS"
-SPR_national_populist_party_long:0 "Juntas de Ofensiva Nacional-Sindicalista"
+SPR_totalist_party:0 "마르크스주의 통일 노동자당"
+SPR_totalist_party_long:0 "마르크스주의 통일 노동자당"
+SPR_syndicalist_party:0 "전국노동자연합-이베리아 아나키스트 연맹"
+SPR_syndicalist_party_long:0 "전국노동자연합-이베리아 아나키스트 연맹"
+SPR_radical_socialist_party:0 "카바예로주의자"
+SPR_radical_socialist_party_long:0 "카바예로주의자"
+SPR_social_democrat_party:0 "프리에토주의자"
+SPR_social_democrat_party_long:0 "프리에토주의자"
+SPR_social_liberal_party:0 "공화좌파"
+SPR_social_liberal_party_long:0 "공화좌파"
+SPR_market_liberal_party:0 "중도자유당"
+SPR_market_liberal_party_long:0 "중도자유당"
+SPR_social_conservative_party:0 "국민행동당"
+SPR_social_conservative_party_long:0 "국민행동당 중도파"
+SPR_authoritarian_democrat_party:0 "국민행동당"
+SPR_authoritarian_democrat_party_long:0 "국민행동당 급진파"
+SPR_paternal_autocrat_party:0 "스페인 팔랑헤당"
+SPR_paternal_autocrat_party_long:0 "스페인 팔랑헤당"
+SPR_national_populist_party:0 "국가조합주의 운동연합"
+SPR_national_populist_party_long:0 "국가조합주의 운동연합"
 
 ### Ideas ###
 SPR_memories_of_the_republic:0 "Memories of the Republic"
