KR_Spain_FAI_l_english 정당 이름 번역
스페인 혁명이 일어나면 출현하는 세력인 CNT-FAI 세력의 정당 이름을 번역했습니다.

--- a/Kaiserreich Korean Translation/localisation/KR_Spain_FAI_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Spain_FAI_l_english.yml
@@ -79,23 +79,23 @@ CNT_portugal:0 "Bringing the Revolution to Portugal"
 CNT_portugal_desc:0 "Our Iberian Federation will never be complete until we spread the revolution to our brethren in the west."
 
 ### Parties ###
-CNT_totalist_party:0 "POUM"
-CNT_totalist_party_long:0 "Partido Obrero de Unificación Marxista"
-CNT_syndicalist_party:0 "CNT-FAI"
-CNT_syndicalist_party_long:0 "Confederación Nacional del Trabajo - Federación Anarquista Ibérica"
-CNT_radical_socialist_party:0 "Caballeistas"
-CNT_radical_socialist_party_long:0 "Caballeistas"
-CNT_social_democrat_party:0 "Prietistas"
-CNT_social_democrat_party_long:0 "Prietistas"
-CNT_social_liberal_party:0 "Izquierda Republicana"
-CNT_social_liberal_party_long:0 "Izquierda Republicana, the Republican Left"
-CNT_market_liberal_party:0 "PLM"
-CNT_market_liberal_party_long:0 "Partido Liberal Moderado - the Moderate Liberal Party"
-CNT_social_conservative_party:0 "Acción Popular"
-CNT_social_conservative_party_long:0 "The Moderate Section of the Acción Popular"
-CNT_authoritarian_democrat_party:0 "Acción Popular"
-CNT_authoritarian_democrat_party_long:0 "The Radical Section of the Acción Popular"
-CNT_paternal_autocrat_party:0 "Falange Española"
-CNT_paternal_autocrat_party_long:0 "Falange Española"
-CNT_national_populist_party:0 "JONS"
-CNT_national_populist_party_long:0 "Juntas de Ofensiva Nacional-Sindicalista"
+CNT_totalist_party:0 "마르크스주의 통일 노동자당"
+CNT_totalist_party_long:0 "마르크스주의 통일 노동자당"
+CNT_syndicalist_party:0 "전국노동자연합-이베리아 아나키스트 연맹"
+CNT_syndicalist_party_long:0 "전국노동자연합-이베리아 아나키스트 연맹"
+CNT_radical_socialist_party:0 "카바예로주의자"
+CNT_radical_socialist_party_long:0 "카바예로주의자"
+CNT_social_democrat_party:0 "프리에토주의자"
+CNT_social_democrat_party_long:0 "프리에토주의자"
+CNT_social_liberal_party:0 "공화좌파"
+CNT_social_liberal_party_long:0 "공화좌파"
+CNT_market_liberal_party:0 "중도자유당"
+CNT_market_liberal_party_long:0 "중도자유당"
+CNT_social_conservative_party:0 "국민행동당"
+CNT_social_conservative_party_long:0 "국민행동당 중도파"
+CNT_authoritarian_democrat_party:0 "국민행동당"
+CNT_authoritarian_democrat_party_long:0 "국민행동당 급진파"
+CNT_paternal_autocrat_party:0 "스페인 팔랑헤당"
+CNT_paternal_autocrat_party_long:0 "스페인 팔랑헤당"
+CNT_national_populist_party:0 "국가조합주의 운동연합"
+CNT_national_populist_party_long:0 "국가조합주의 운동연합"
